--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   email_validator: ^2.1.17
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
+  firebase_core:
+  firebase_auth: ^4.2.10
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
