--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_bloc: ^8.1.1
   firebase_core:
   firebase_auth: ^4.2.10
+  cloud_firestore: ^4.4.4
+
 
 dev_dependencies:
   flutter_test:
