--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,9 @@ dependencies:
   firebase_core:
   firebase_auth: ^4.2.10
   cloud_firestore: ^4.4.4
-
-
+  image_picker: ^0.8.7+3
+  firebase_storage: ^11.1.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
